discussion/kv_engine/161819/161819_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48506: Don't copy the expelledItems container around at expel

Just use a 'std::unique_ptr<CheckpointQueue>' and rely on the
unique_ptr move semantic.

Change-Id: Ia09ac19249a33995110fb63cc96a2c25b94f97fd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2021-09-24 15:14:03.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-24 15:55:00.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34387/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint.cc:530:5:
error: use of undeclared identifier "TRACE_EVENT0"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/34387/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12836/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:530:5: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
    TRACE_EVENT0("wip", "C::expelItems");
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:555:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::splice");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:568:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::open_and_mem");
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:592:9: error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
        TRACE_EVENT0("wip", "C::expelItems::closed_or_disk");
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12836/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint.cc:530:5:
error: use of undeclared identifier "TRACE_EVENT0" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/12836/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/15234/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/40401/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/11626/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/2504/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/2470/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/14707/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/14446/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/13592/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/22718/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
